package edu.fiuba.algo3.modelo;

public interface Sentido {
  Posicion ejecutar(Posicion posicion);
}
